// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should render a preloader 1`] = `
<div
  className="page page__home"
>
  <header
    className="site-header"
  >
    <Connect(SiteNav)
      currentUser={
        Object {
          "fullname": "John Doe",
          "id": 1,
        }
      }
    />
    <section
      className="site-header__hero"
    >
      <h2>
        Delicious recipes, just a search away...
      </h2>
      <input
        className="site-header__hero--input"
        onFocus={[Function]}
        placeholder="what would you like to cook?"
        type="text"
      />
    </section>
  </header>
  <main>
    <div
      className="container"
    >
      <section
        className="page__home--top-rated"
      >
        <header>
          <h1>
            Top Rated
          </h1>
        </header>
        <Preloader />
        <footer>
          <PaginationBoxView
            activeClassName="active"
            breakLabel="..."
            containerClassName="pagination is-fetching"
            disableInitialCallback={false}
            disabledClassName="disabled"
            marginPagesDisplayed={2}
            nextClassName="next"
            nextLabel={
              <i
                className="material-icons"
              >
                chevron_right
              </i>
            }
            onPageChange={[Function]}
            pageClassName="waves-effect"
            pageCount={1}
            pageRangeDisplayed={4}
            previousClassName="previous"
            previousLabel={
              <i
                className="material-icons"
              >
                chevron_left
              </i>
            }
          />
        </footer>
      </section>
    </div>
  </main>
  <SiteFooter />
</div>
`;

exports[`Home should render top recipes when recipes props is received 1`] = `
<div
  className="page page__home"
>
  <header
    className="site-header"
  >
    <Connect(SiteNav)
      currentUser={
        Object {
          "fullname": "John Doe",
          "id": 1,
        }
      }
    />
    <section
      className="site-header__hero"
    >
      <h2>
        Delicious recipes, just a search away...
      </h2>
      <input
        className="site-header__hero--input"
        onFocus={[Function]}
        placeholder="what would you like to cook?"
        type="text"
      />
    </section>
  </header>
  <main>
    <div
      className="container"
    >
      <section
        className="page__home--top-rated"
      >
        <header>
          <h1>
            Top Rated
          </h1>
        </header>
        <p
          className="no-recipes"
        >
          Sorry no recipes present at the moment
          <span
            aria-label="sad"
            role="img"
          >
            😢  
          </span>
          , please try again later
          <span
            aria-label="please"
            role="img"
          >
            🙏
          </span>
        </p>
        <footer>
          <PaginationBoxView
            activeClassName="active"
            breakLabel="..."
            containerClassName="pagination "
            disableInitialCallback={false}
            disabledClassName="disabled"
            marginPagesDisplayed={2}
            nextClassName="next"
            nextLabel={
              <i
                className="material-icons"
              >
                chevron_right
              </i>
            }
            onPageChange={[Function]}
            pageClassName="waves-effect"
            pageCount={1}
            pageRangeDisplayed={4}
            previousClassName="previous"
            previousLabel={
              <i
                className="material-icons"
              >
                chevron_left
              </i>
            }
          />
        </footer>
      </section>
    </div>
  </main>
  <SiteFooter />
</div>
`;

exports[`Home should render top recipes when recipes props is received 2`] = `
<div
  className="page page__home"
>
  <header
    className="site-header"
  >
    <Connect(SiteNav)
      currentUser={
        Object {
          "fullname": "John Doe",
          "id": 1,
        }
      }
    />
    <section
      className="site-header__hero"
    >
      <h2>
        Delicious recipes, just a search away...
      </h2>
      <input
        className="site-header__hero--input"
        onFocus={[Function]}
        placeholder="what would you like to cook?"
        type="text"
      />
    </section>
  </header>
  <main>
    <div
      className="container"
    >
      <section
        className="page__home--top-rated"
      >
        <header>
          <h1>
            Top Rated
          </h1>
        </header>
        <TopRatedRecipeList
          recipes={
            Array [
              Object {
                "User": Object {
                  "fullname": "example user",
                  "id": 2,
                  "username": null,
                },
                "createdAt": "2017-10-23T08:08:47.566Z",
                "description": "It is simply better than ghanian jollof",
                "downVoteCount": 1,
                "favoriteCount": 3,
                "id": 2,
                "img_url": "http://www.africanbites.com/wp-content/uploads/2014/05/IMG_9677-2-1-150x150.jpg",
                "ingredients": Array [
                  "rice",
                  "canola oil",
                ],
                "instructions": Array [
                  "Break up the clumpy rice before starting.",
                  "Garnish with chopped scallion and serve",
                ],
                "name": "Jollof Rice",
                "owner": 2,
                "upVoteCount": 3,
                "updatedAt": "2018-01-16T10:02:13.814Z",
                "viewCount": 6,
              },
              Object {
                "User": Object {
                  "fullname": "Email Mail",
                  "id": 11,
                  "username": null,
                },
                "createdAt": "2017-11-09T09:08:15.109Z",
                "description": "This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti.",
                "downVoteCount": 1,
                "favoriteCount": 1,
                "id": 5,
                "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
                "owner": 11,
                "upVoteCount": 1,
                "updatedAt": "2018-01-10T10:54:26.519Z",
                "viewCount": 2,
              },
              Object {
                "User": Object {
                  "fullname": "William Olojede",
                  "id": 29,
                  "username": null,
                },
                "createdAt": "2018-01-13T00:09:15.646Z",
                "description": "This is the recipe for a very delicious dish",
                "downVoteCount": 0,
                "favoriteCount": 0,
                "id": 169,
                "img_url": "https://imgurlfordish.com/verydelicousdish.jpg",
                "ingredients": Array [
                  "ingredient 1",
                  "ingredient 2",
                ],
                "instructions": Array [
                  "This is the first step in cooking this delicious dish",
                  "This is the next step",
                ],
                "name": "some random very delicious dish",
                "owner": 29,
                "upVoteCount": 1,
                "updatedAt": "2018-01-13T10:50:00.734Z",
                "viewCount": 2,
              },
              Object {
                "User": Object {
                  "fullname": "Email Mail",
                  "id": 11,
                  "username": null,
                },
                "createdAt": "2017-11-11T09:07:11.059Z",
                "description": "This is one of my 'go to' recipes ",
                "downVoteCount": 0,
                "favoriteCount": 1,
                "id": 25,
                "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
                "owner": 11,
                "upVoteCount": 1,
                "updatedAt": "2017-11-26T15:54:12.531Z",
                "viewCount": 2,
              },
              Object {
                "User": Object {
                  "fullname": "Email Mail",
                  "id": 11,
                  "username": null,
                },
                "createdAt": "2017-11-11T09:07:31.983Z",
                "description": "This is one of my 'go to' recipes ",
                "downVoteCount": 0,
                "favoriteCount": 1,
                "id": 91,
                "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
                "owner": 11,
                "upVoteCount": 1,
                "updatedAt": "2018-01-04T14:20:59.983Z",
                "viewCount": 1,
              },
              Object {
                "User": Object {
                  "fullname": "Email Mail",
                  "id": 11,
                  "username": null,
                },
                "createdAt": "2017-11-11T09:07:12.040Z",
                "description": "This is one of my 'go to' recipes ",
                "downVoteCount": 0,
                "favoriteCount": 0,
                "id": 28,
                "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
                "owner": 11,
                "upVoteCount": 0,
                "updatedAt": "2017-11-17T14:02:53.627Z",
                "viewCount": 1,
              },
            ]
          }
        />
        <footer>
          <PaginationBoxView
            activeClassName="active"
            breakLabel="..."
            containerClassName="pagination "
            disableInitialCallback={false}
            disabledClassName="disabled"
            marginPagesDisplayed={2}
            nextClassName="next"
            nextLabel={
              <i
                className="material-icons"
              >
                chevron_right
              </i>
            }
            onPageChange={[Function]}
            pageClassName="waves-effect"
            pageCount={24}
            pageRangeDisplayed={4}
            previousClassName="previous"
            previousLabel={
              <i
                className="material-icons"
              >
                chevron_left
              </i>
            }
          />
        </footer>
      </section>
    </div>
  </main>
  <SiteFooter />
</div>
`;

exports[`Home should render with right amount of elements 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "blank",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Home
        currentUser={
          Object {
            "fullname": "John Doe",
            "id": 1,
          }
        }
        dispatch={[Function]}
        isFetching={false}
      >
        <div
          className="page page__home"
        >
          <header
            className="site-header"
          >
            <Connect(SiteNav)
              currentUser={
                Object {
                  "fullname": "John Doe",
                  "id": 1,
                }
              }
            >
              <SiteNav
                currentUser={
                  Object {
                    "fullname": "John Doe",
                    "id": 1,
                  }
                }
                dispatch={[Function]}
              >
                <nav
                  className="site-header__nav"
                >
                  <div
                    className="nav-wrapper container"
                  >
                    <Link
                      className="left brand-logo"
                      replace={false}
                      to="/"
                    >
                      <a
                        className="left brand-logo"
                        href="/"
                        onClick={[Function]}
                      >
                        MoreRecipes
                      </a>
                    </Link>
                    <button
                      className="dropdown right"
                      onClick={[Function]}
                    >
                      <UserImg
                        type="inSiteNav"
                        user={
                          Object {
                            "fullname": "John Doe",
                            "id": 1,
                          }
                        }
                      >
                        <div
                          className="user-image inSiteNav"
                          data-for="username-inSiteNav"
                          data-tip="John Doe"
                        >
                          <div
                            className="user-image__no-img"
                          >
                            <span>
                              J
                            </span>
                            <span>
                              D
                            </span>
                          </div>
                        </div>
                      </UserImg>
                    </button>
                  </div>
                </nav>
              </SiteNav>
            </Connect(SiteNav)>
            <section
              className="site-header__hero"
            >
              <h2>
                Delicious recipes, just a search away...
              </h2>
              <input
                className="site-header__hero--input"
                onFocus={[Function]}
                placeholder="what would you like to cook?"
                type="text"
              />
            </section>
          </header>
          <main>
            <div
              className="container"
            >
              <section
                className="page__home--top-rated"
              >
                <header>
                  <h1>
                    Top Rated
                  </h1>
                </header>
                <p
                  className="no-recipes"
                >
                  Sorry no recipes present at the moment
                  <span
                    aria-label="sad"
                    role="img"
                  >
                    😢  
                  </span>
                  , please try again later
                  <span
                    aria-label="please"
                    role="img"
                  >
                    🙏
                  </span>
                </p>
                <footer>
                  <PaginationBoxView
                    activeClassName="active"
                    breakLabel="..."
                    containerClassName="pagination "
                    disableInitialCallback={false}
                    disabledClassName="disabled"
                    marginPagesDisplayed={2}
                    nextClassName="next"
                    nextLabel={
                      <i
                        className="material-icons"
                      >
                        chevron_right
                      </i>
                    }
                    onPageChange={[Function]}
                    pageClassName="waves-effect"
                    pageCount={1}
                    pageRangeDisplayed={4}
                    previousClassName="previous"
                    previousLabel={
                      <i
                        className="material-icons"
                      >
                        chevron_left
                      </i>
                    }
                  >
                    <ul
                      className="pagination "
                    >
                      <li
                        className="previous disabled"
                      >
                        <a
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          tabIndex="0"
                        >
                          <i
                            className="material-icons"
                          >
                            chevron_left
                          </i>
                        </a>
                      </li>
                      <PageView
                        activeClassName="active"
                        key="key0/.0"
                        onClick={[Function]}
                        page={1}
                        pageClassName="waves-effect"
                        selected={true}
                      >
                        <li
                          className="waves-effect active"
                        >
                          <a
                            aria-current="page"
                            aria-label="Page 1 is your current page"
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            tabIndex="0"
                          >
                            1
                          </a>
                        </li>
                      </PageView>
                      <li
                        className="next disabled"
                      >
                        <a
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          tabIndex="0"
                        >
                          <i
                            className="material-icons"
                          >
                            chevron_right
                          </i>
                        </a>
                      </li>
                    </ul>
                  </PaginationBoxView>
                </footer>
              </section>
            </div>
          </main>
          <SiteFooter>
            <footer
              className="page-footer"
            >
              <div
                className="container"
              >
                <p>
                  Crafted with 
                  <i
                    className="mdi mdi-heart"
                  />
                   by 
                  <a
                    href="http://william.ng/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    William I. Olojede
                  </a>
                </p>
              </div>
            </footer>
          </SiteFooter>
        </div>
      </Home>
    </Router>
  </BrowserRouter>
</Provider>
`;
